--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,5 +3,8 @@
     --secondary-color: #0ADFE7;
     --white-color: #FFFFFF;
     --light-gray-color: #EEEEEE;
+    --gray-color: #6E7373;
+    --footer-color: #700B36;
+    --heart-color: #F50F0F;
     --gap: 3rem;
 }
